--- a/src/components/Cards/Card/Сard.module.css
+++ b/src/components/Cards/Card/Сard.module.css
@@ -1,30 +1,26 @@
 .card{
-    max-width: 400px;
+    max-width: 500px;
     width: 100%;
-    height: 400px;
+    height: 480px;
     margin-bottom: 20px;
     margin-right: 30px;
     position: relative;
 }
 .image{
     width: 100%;
-    height: 100%;
+    height: 75%;
     border-radius: 10px;
     object-fit: cover;
 }
 .textWrapper{
-    opacity: 0;
-    color: var(--color-gray-100);
+    opacity: 1;
+    color: var(--black);
     text-align: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
     padding: 15px;
     border-radius: 10px;
     transition: 0.3s;
     font-size: 16px;
+    border: 1px solid var(--black);    
 }
 .text{
     height: 100%;
@@ -44,18 +40,23 @@
     width: 20px;
     height: 20px;
 }
+
 .btn:hover{
     background: var(--gray-200);
     color: var(--color-white);
 }
-.card:hover .textWrapper{
-    opacity: 1;
-    background: var(--transparent-200);
-}
-@media screen and (max-width: 1100px) {
+
+@media screen and (max-width: 1400px) {
     .card{
-        height: 300px;
-        max-width: 300px;
+        height: 480px;
+        max-width: 400px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .card{
+        height: 250px;
+        max-width: 250px;
         margin-bottom: 15px;
         margin-right: 20px;
     }
@@ -65,8 +66,9 @@
     .text{
         font-size: 14px;
     }
-  }
-  @media screen and (max-width: 970px){
+}
+
+@media screen and (max-width: 970px){
     .card{
         height: 250px;
         max-width: 250px;
@@ -141,9 +143,36 @@
 
   @media screen and (max-width: 570px){
     .card{
-        height: 100px;
-        max-width: 100px;
+        height: 130px;
+        max-width: 130px;
         margin-bottom: 6px;
+        margin-right: 4px;
+    }
+    .image{
+        border-radius: 3px;
+    }
+    .textWrapper{
+        padding: 2px;
+        border-radius: 3px;
+    }
+    .text{
+        font-size: 6px;
+        border-radius: 3px;
+    }
+    .btn{
+        border-radius: 5px;
+        font-size: 5px;
+        width: 8px;
+        height: 8px;
+        padding: 0;
+        text-align: center;
+    }
+  }
+  @media screen and (max-width: 400px){
+    .card{
+        height: 200px;
+        max-width: 200px;
+        margin-bottom: 10px;
         margin-right: 4px;
     }
     .image{
