--- a/src/components/PageTreeList/PageTreeList.module.css
+++ b/src/components/PageTreeList/PageTreeList.module.css
@@ -2,25 +2,24 @@
     padding: 150px 300px;
     font-size: 20px;
 }
+
 .wrapImgModal{
     padding: 0;
     background: var(--black);
     text-align: center;
-    max-width: 700px; 
+    max-width: 1100px; 
+    /* max-width: 900px;  */
     width: 100%;
     position: relative;
+
+    margin: 0 auto;
 }
-.rightPanelModal{
-    max-width: 250px;
-    width: 100%;
-    background: var(--gray-100);  
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
+
 .imgModal{
-    max-height: 600px;
+    max-height: 750px;
     height: 100%;
-    max-width: 655px;
+    max-width: 1100px;
+    /* max-width: 655px; */
     object-fit: cover;
 }
 .btns button{
@@ -29,7 +28,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 50px;
     color: var(--color-gray-400);
     transition: .9s;
     outline: none;
@@ -58,13 +57,28 @@
     text-align: right;
 }
 
-@media screen and (min-width: 980px) and (max-width: 1120px){
+@media screen and (min-width: 1120px) and (max-width: 1500px){
     .listPosition{
         padding: 150px 200px;
         font-size: 16px;
     }
-    .rightPanelModal{
-        max-width: 150px;
+    .wrapImgModal{
+        max-width: 550px;
+    }
+    .imgModal{
+        max-height: 600px;
+
+        max-width: 550px;
+    }
+    .btns button{
+        font-size: 40px;
+    }
+}
+
+@media screen and (min-width: 980px) and (max-width: 1120px){
+    .listPosition{
+        padding: 150px 200px;
+        font-size: 16px;
     }
     .wrapImgModal{
         max-width: 550px;
@@ -75,15 +89,14 @@
     }
     .btns button{
         top: 35%;
+        font-size: 35px;
+
     }
 }
 @media screen and (min-width: 720px) and (max-width: 980px){
     .listPosition {
         padding: 50px 70px;
         font-size: 14px;
-    }
-    .rightPanelModal{
-        max-width: 150px;
     }
     .wrapImgModal{
         max-width: 550px;
@@ -94,15 +107,13 @@
     }
     .btns button{
         top: 35%;
+        font-size: 30px;
     }
 } 
 @media screen and (min-width: 580px) and (max-width: 720px){
     .listPosition{
         padding: 50px 70px;
         font-size: 12px;
-    }
-    .rightPanelModal{
-        max-width: 120px;
     }
     .wrapImgModal{
         max-width: 450px;
@@ -120,9 +131,6 @@
     .listPosition{
         padding: 40px 0;
         font-size: 8px;
-    }
-    .rightPanelModal{
-        max-width: 70px;
     }
     .wrapImgModal{
         max-width: 210px;
