--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,7 +1,8 @@
 .list{
     display: flex;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     list-style-type: none;
     justify-content: center;
     flex-wrap: wrap;
